Trying that mobile readability fix again

--- a/themes/startpage-theme/static/css/styles.css
+++ b/themes/startpage-theme/static/css/styles.css
@@ -89,8 +89,8 @@ header a:hover, footer a {
 }
 
 @media (max-width: 786px) {
-  .phonenumber a[href^=tel] {
-    color: #84868d !important;
+  .phone a[href^=tel] {
+    color: #289EEE !important;
   }
 }
 
